--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "aws-cdk": "^1.3.0"
   },
   "dependencies": {
-    "@aws-cdk/aws-sns": "^1.3.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.3.0",
-    "@aws-cdk/aws-sqs": "^1.3.0",
-    "@aws-cdk/core": "^1.3.0"
+    "@aws-cdk/core": "^1.3.0",
+    "@aws-cdk/aws-ecs-patterns": "^1.3.0",
+    "@aws-cdk/aws-ecs": "^1.3.0",
+    "@aws-cdk/aws-ec2": "^1.3.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "^1.3.0"
   }
 }
